[package]
name = "yz-posix-mode"
description = "standalone POSIX.1 file mode bitfields and bitmasks"
version = "0.1.0"
authors = [
  "Erik Zscheile <zseri@ytrizja.de>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YZITE/posix-mode"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
num = ["num_enum"]

[dependencies]
bitflags = "1.2"

[dependencies.nix]
version = "0.17"
optional = true

[dependencies.num_enum]
version = "0.5"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[dependencies.umask]
version = ">= 0.1, < 1.1"
optional = true

[target."cfg(unix)".dev-dependencies]
nix = "0.17"
paste = "1.0"
